# AeonDE

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: code-format.cmake  gtest.cmake  launch.json.in  pre-commit.in  settings.json.in  vscode.cmake
include/aeonde/: AeonDE.h  Platform.h
source/: CMakeLists.txt
source/sandbox/: CMakeLists.txt  Main.cpp  OpenGLFunctions.cpp  OpenGLFunctions.h  Sandbox.cpp  Sandbox.h  Windows.cpp  glFunctions.txt
source/tests/: CMakeLists.txt  Main.cpp
