# Copyright (C) 2018 Rodrigo Jose Hernandez Cordoba
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if(BUILD_SANDBOX)

find_package(OpenGL REQUIRED)

find_program (SED_EXECUTABLE sed HINTS ENV MINGW_PREFIX MSYS2_PATH)
add_custom_command(OUTPUT
                        ${CMAKE_CURRENT_BINARY_DIR}/glDeclarations.h
                        ${CMAKE_CURRENT_BINARY_DIR}/glDefinitions.h
                        ${CMAKE_CURRENT_BINARY_DIR}/glAssignments.h
                        COMMAND ${SED_EXECUTABLE} "\"s/^\\s*\\(gl\\S*\\)\\s*${DOLLAR_SIGN}/extern PFN\\U\\1\\EPROC \\1$<SEMICOLON>/g\"" glFunctions.txt > ${CMAKE_CURRENT_BINARY_DIR}/glDeclarations.h
                        COMMAND ${SED_EXECUTABLE} "\"s/^\\s*\\(gl\\S*\\)\\s*${DOLLAR_SIGN}/PFN\\U\\1\\EPROC \\1 = nullptr$<SEMICOLON>/g\"" glFunctions.txt > ${CMAKE_CURRENT_BINARY_DIR}/glDefinitions.h
                        COMMAND ${SED_EXECUTABLE} "\"s/^\\s*\\(gl\\S*\\)\\s*${DOLLAR_SIGN}/GLGETPROCADDRESS ( PFN\\U\\1\\EPROC, \\1 )$<SEMICOLON>/g\"" glFunctions.txt > ${CMAKE_CURRENT_BINARY_DIR}/glAssignments.h
                        COMMAND ${SED_EXECUTABLE} -i "\"s/\\*DISCLAIMER\\*/ THIS FILE WAS AUTOGENERATED, DO NOT EDIT, edit glFunctions.txt instead. /g\"" ${CMAKE_CURRENT_BINARY_DIR}/glDeclarations.h
                        COMMAND ${SED_EXECUTABLE} -i "\"s/\\*DISCLAIMER\\*/ THIS FILE WAS AUTOGENERATED, DO NOT EDIT, edit glFunctions.txt instead. /g\"" ${CMAKE_CURRENT_BINARY_DIR}/glDefinitions.h
                        COMMAND ${SED_EXECUTABLE} -i "\"s/\\*DISCLAIMER\\*/ THIS FILE WAS AUTOGENERATED, DO NOT EDIT, edit glFunctions.txt instead. /g\"" ${CMAKE_CURRENT_BINARY_DIR}/glAssignments.h
                        DEPENDS
                            ${CMAKE_CURRENT_SOURCE_DIR}/glFunctions.txt
                        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
                        COMMENT "Generating OpenGL functions for ${CMAKE_GENERATOR}.")

include_directories(${CMAKE_CURRENT_BINARY_DIR})

set(SANDBOX_SRCS Main.cpp Sandbox.cpp Windows.cpp OpenGLFunctions.cpp)
set(SANDBOX_HDRS
    Sandbox.h 
    OpenGLFunctions.h
    ${CMAKE_CURRENT_BINARY_DIR}/glDeclarations.h
    ${CMAKE_CURRENT_BINARY_DIR}/glDefinitions.h
    ${CMAKE_CURRENT_BINARY_DIR}/glAssignments.h
)

add_executable(sandbox ${SANDBOX_SRCS} ${SANDBOX_HDRS})

target_link_libraries(sandbox AeonDE ${OPENGL_gl_LIBRARY})

endif(BUILD_SANDBOX)
